# diffmark

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
src/: app.rs  clipboard.rs  diff_parser.rs  git_diff.rs  main.rs  payload.rs
