[package]
name = "diffmark"
version = "0.1.1"
edition = "2024"
rust-version = "1.88"
description = "A terminal UI for reviewing uncommitted git diffs and copying inline comments for AI agents."
license = "MIT"
readme = "README.md"
repository = "https://github.com/su27/diffmark"
homepage = "https://github.com/su27/diffmark"
documentation = "https://docs.rs/diffmark"
keywords = ["git", "diff", "tui", "review", "ai"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
anyhow = "1"
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
crossterm = "0.29"
ratatui = "0.29"

[profile.release]
lto = true
codegen-units = 1
strip = true

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
